fix: blockquote text color in dark mode using Tailwind utilities

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -219,15 +219,14 @@
 
     blockquote {
       @apply bg-primary-lighter dark:bg-secondary-lighter;
+      @apply text-primary dark:text-white;
       margin: 0 0 1.1em;
       box-shadow: var(--color-primary) -7px 0 0 0;
       border-radius: 5px;
       padding: 15px 20px;
-      color: var(--color-primary);
 
       :global(.dark) & {
         box-shadow: var(--color-secondary) -7px 0 0 0;
-        color: white;
       }
 
       a {
